--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/redux@latest/dist/redux.min.js"></script>
+    <script src="sweetalert2.min.js"></script>
+    <link rel="stylesheet" href="sweetalert2.min.css" />
     <title>Multi Counter</title>
   </head>
   <body>
@@ -15,36 +17,14 @@
         Multi Counter Application
       </h1>
 
-      <!-- counters -->
+      <div class="mx-auto max-w-md mt-10 space-y-5" id="counter"></div>
       <div class="mx-auto max-w-md mt-10 space-y-5">
-        <div
-          class="p-4 h-auto flex flex-col items-center justify-center space-y-5 bg-white rounded shadow"
-        >
-          <div id="counter" class="text-2xl font-semibold"></div>
-          <div class="flex space-x-3">
-            <button
-              id="increment"
-              class="bg-indigo-400 text-white px-3 py-2 rounded shadow"
-            >
-              Increment
-            </button>
-            <button
-              id="decrement"
-              class="bg-red-400 text-white px-3 py-2 rounded shadow"
-            >
-              Decrement
-            </button>
-          </div>
-        </div>
-      </div>
-       <div class="mx-auto max-w-md mt-10 space-y-5">
-        <div class="flex space-x-3 justify-end mt-4 addcount-reset">
+        <div class="flex space-x-3 justify-end mt-4">
           <button
-          onclick="addCount()"
             id="addCounter"
             class="bg-indigo-400 text-white px-3 py-2 rounded shadow"
           >
-            + Add Counter
+            Add Counter
           </button>
           <button
             id="reset"
@@ -53,9 +33,7 @@
             Reset
           </button>
         </div>
-       </div>
-     
-        
+      </div>
     </div>
 
     <script src="./script.js"></script>
